# SDL2-SwiftPackageManager

./: .gitignore  .gitmodules  CMakeLists.txt  Package.swift  README.md  SDL.apinotes  SDL2.pc  module.modulemap
SDL-gpu.xcodeproj/: project.pbxproj
SDL2/: CMakeLists.txt
SDL2/include/: SDL.apinotes  SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config.h.cmake  SDL_config.h.in  SDL_config_android.h  SDL_config_emscripten.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_os2.h  SDL_config_pandora.h  SDL_config_psp.h  SDL_config_windows.h  SDL_config_winrt.h  SDL_config_wiz.h  SDL_copying.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  (+53 more)
SDL2/src/: SDL.c  SDL_assert.c  SDL_assert_c.h  SDL_dataqueue.c  SDL_dataqueue.h  SDL_error.c  SDL_error_c.h  SDL_hints.c  SDL_hints_c.h  SDL_internal.h  SDL_log.c  atomic  audio  core  cpuinfo  dynapi  events  file  filesystem  haptic  hidapi  joystick  libm  loadso  locale  main  misc  power  render  sensor  stdlib  test  thread  timer  video
SDL2/src/core/android/: SDL_android.c  SDL_android.h
SDL2/src/custom/core/: SDL_android.c
SDL_ttf/: CMakeLists.txt  Info.plist  SDL_ttf.c  SDL_ttf.h  external
SDL_ttf.xcodeproj/: project.pbxproj
SDL_ttf/include/: SDL_ttf.h  freetype  ft2build.h  module.modulemap
sdl-gpu/: CMakeLists.txt  SDL_gpu.c  SDL_gpu_matrix.c  SDL_gpu_renderer.c  SDL_gpu_shapes.c  externals  renderer_GLES_1.c  renderer_GLES_2.c  renderer_GLES_3.c  renderer_GL_common.inl  renderer_OpenGL_1.c  renderer_OpenGL_1_BASE.c  renderer_OpenGL_2.c  renderer_OpenGL_3.c  renderer_OpenGL_4.c  renderer_shapes_GL_common.inl
sdl-gpu-xcode/: .gitignore
sdl-gpu-xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease  install_postBuildPhase.makeRelWithDebInfo
sdl-gpu-xcode/SDL_gpu.xcodeproj/: project.pbxproj
sdl-gpu/include/: SDL_gpu.apinotes  SDL_gpu.h  SDL_gpu_GLES_1.h  SDL_gpu_GLES_2.h  SDL_gpu_GLES_3.h  SDL_gpu_OpenGL_1.h  SDL_gpu_OpenGL_1_BASE.h  SDL_gpu_OpenGL_2.h  SDL_gpu_OpenGL_3.h  SDL_gpu_OpenGL_4.h  SDL_gpu_RendererImpl.h  module.modulemap  stb_image.h  stb_image_write.h
stb_image/: stb_image.c  stb_image.h  stb_image_write.c  stb_image_write.h
